# my-data-toolkit

./: .coveragerc  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  .readthedocs.yml  .travis.yml  CHANGELOG.md  MANIFEST.in  Makefile  README.md  asv.conf.json  codecov.yml  environment-dev.yaml  environment.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  temp.py  test.py  versioneer.py  wkb.csv
.github/: dependabot.yaml  dependabot.yml  pull_request_template.md
.github/workflows/: autoupdate-branch.yml  branch.yaml  branch.yml  cancel.yaml  cancel.yml  ci.yml  codeql-analysis.yaml  codeql-analysis.yml  codeql.yaml  nightly-test.yaml  nightly-tests.yaml  nightly-tests.yml  release.yaml  release.yml  sdist.yaml  sdist.yml  sphinx.yml  test.yaml  tests.yml  versioneer.yaml  versioneer.yml  workflow-run-cleaner.yaml  workflow-run.yaml
ci/env/: 310-dev.yaml  310-latest-base.yaml  310-latest-shapely2.yaml  310-minimal.yaml  311-latest-h3-4.x.yaml  311-latest-h3-pre.yaml  311-latest-shapely2.yaml  311-minimal.yaml  312-minimal.yaml  313-minimal.yaml  314-minimal.yaml  37-minimal.yaml  38-minimal.yaml  39-minimal.yaml  dev.yaml  latest-base.yaml  latest.yaml
ci/envs/: 310-dev.yaml  310-latest.yaml  310-minimal.yaml  37-dev.yaml  37-latest.yaml  37-minimal.yaml  37.yaml  38-dev.yaml  38-minimal.yaml  38-minimal.yml  38-no-optional-deps.yaml  38.yaml  39-dev.yaml  39-minimal.yaml  39.yaml  dev.yaml
ci/script/: versioneer_update_check.py
doc/: environment.yaml  environment.yml
doc/source/: conf.py  dtoolkit.accessor.rst  dtoolkit.geography.rst  dtoolkit.rst  dtoolkit.transformer.rst  dtoolkit.util.rst  guide.rst  index.rst  modules.rst  reference.rst
doc/source/_template/: redirect.html
doc/source/_templates/: redirect.html
doc/source/guide/: automl.md  build_transformer.ipynb  build_transformer.md  geographic_buffer.md  installation.md  tips_about_accessor.ipynb  tips_about_getattr.ipynb  transformer.md  transformer_description.md  transformer_quickstart.ipynb  transformer_quickstart.md  workflow.md
doc/source/reference/: accessor.rst  geoaccessor.rst  geography.rst  pipeline.rst  transformer.rst  utility.rst
dtoolkit/: __init__.py  _checking.py  _compat.py  _decorator.py  _typing.py  _util.py  _version.py  accessor.py  buffer.py  coord.py  coordinate.py  decorator.py  pipeline.py  transformer.py  util.py
dtoolkit/_decorator/: __init__.py  warning.py
dtoolkit/accessor/: __init__.py  _util.py  _validation.py  base.py  both.py  dataframe.py  pdcolumn.py  register.py  series.py
dtoolkit/accessor/dataframe/: __init__.py  boolean.py  change_axis_type.py  cols.py  decompose.py  drop_inf.py  drop_not_duplicates.py  drop_or_not.py  dropna_index.py  equal.py  expand.py  fillna_regression.py  filter_in.py  fit_transform.py  flatten.py  groupby_index.py  matrix.py  repeat.py  set_unique_index.py  to_series.py  to_zh.py  top_n.py  unique.py  unique_counts.py  values_to_dict.py  weighted_mean.py  weighted_score.py
dtoolkit/accessor/index/: __init__.py  drop_not_duplicates.py  filter.py  len.py  to_set.py
dtoolkit/accessor/series/: __init__.py  _getattr_helper.py  between_replace.py  bin.py  change_axis_type.py  cols.py  drop_inf.py  drop_not_duplicates.py  dropna_index.py  duplicated_groups.py  equal.py  error_report.py  eval.py  expand.py  filter_in.py  getattr.py  groupby_index.py  invert_or_not.py  jenks.py  jenks_bin.py  jenks_breaks.py  len.py  paired_apply.py  query.py  range_replace.py  set_unique_index.py  swap_index_values.py  textdistance.py  textdistance_matrix.py  to_datetime.py  to_set.py  to_zh.py  top_n.py  values_to_dict.py
dtoolkit/accessor/tests/: __init__.py  test_both.py  test_dataframe.py  test_series.py
dtoolkit/geoaccessor/: __init__.py  _compat.py  _util.py  accessor.py  dataframe.py  geodataframe.py  geoseries.py  register.py
dtoolkit/geoaccessor/dataframe/: __init__.py  from_wkb.py  from_wkt.py  from_xy.py  geocode.py  h3.py  is_h3.py  to_geocode.py  to_geoframe.py  to_line.py
dtoolkit/geoaccessor/geocoder/: __init__.py  amap.py  tencent.py
dtoolkit/geoaccessor/geodataframe/: __init__.py  bd09_to_gcj02.py  chncrs.py  cncrs_offset.py  coordinates.py  count_coordinates.py  count_duplicated_geometry.py  drop_duplicates_geometry.py  drop_geometry.py  drop_hole.py  duplicated_geometry.py  duplicated_geometry_groups.py  filter_geometry.py  geoarea.py  geobuffer.py  geocentroid.py  geodistance.py  geodistance_matrix.py  get_coordinates.py  has_hole.py  hole_count.py  hole_counts.py  points_to_h3.py  radius.py  reverse_geocode.py  select_geom_type.py  tessellation.py  to_h3.py  toposimplify.py  utm_crs.py  voronoi.py  xy.py  xy_to_h3.py
dtoolkit/geography/: __init__.py  _typing.py  _validation.py  buffer.py  coordinate.py
dtoolkit/pipeline/: FeatureUnion.py  Pipeline.py  __init__.py  make_pipeline.py  make_union.py
dtoolkit/tests/: test_accessor.py  test_buffer.py  test_column.py  test_coordinate.py  test_doc.py  test_selectortf.py  test_transformer.py  test_transformerbase.py  test_util.py
dtoolkit/transformer/: GeoKMeans.py  __init__.py  _compat.py  _decorator.py  _typing.py  _util.py  _validation.py  base.py  factory.py  numpy.py  pandas.py  pipeline.py  sklearn.py
dtoolkit/util/: __init__.py  _exception.py  _validation.py  decorator.py  generic.py  multi_if_else.py  parallelize.py  snake_to_camel.py
example/transformer/: dtoolkit-way.py  pandas-way.py  plustf.py
script/: example.py  make_nb.py  make_repl.py
test/: _compat.py
test/_decorator/: test_warning.py
test/accessor/: test_both.py  test_dataframe.py  test_register.py  test_series.py
test/geoaccessor/: __init__.py  test_accessor.py  test_dataframe.py  test_geoseries.py  test_register.py  test_util.py
test/pipeline/: __init__.py  conftest.py  data.py  test_FeatureUnion.py  test_Pipeline.py
test/transformer/: conftest.py  data.py  test_factory.py  test_numpy.py  test_pandas.py  test_pipeline.py  test_sklearn.py  test_util.py
test/util/: test_generic.py  test_multi_if_else.py
(+205 files in other folders)
