[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.
[tool.versioneer]
VCS = "git"
style = "pep440-old"
versionfile_source = "dtoolkit/_version.py"
versionfile_build = "dtoolkit/_version.py"
tag_prefix = "v"
parentdir_prefix = "dtoolkit-"
