[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "my-data-toolkit"
dynamic = ["version"]
authors = [{ name = "Zero <@Zeroto521>", email = "Zeroto521@gmail.com" }]
description = "Face the engineering of data preprocessing."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = ["pandas>=2.0.3"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: Unix",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

[project.urls]
Documentation = "https://my-data-toolkit.readthedocs.io"
Repository = "https://github.com/Zeroto521/my-data-toolkit"
Changelog = "https://my-data-toolkit.readthedocs.io/en/latest/changelog.html"



# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.
[tool.versioneer]
VCS = "git"
style = "pep440-old"
versionfile_source = "dtoolkit/_version.py"
versionfile_build = "dtoolkit/_version.py"
tag_prefix = "v"
parentdir_prefix = "dtoolkit-"

[tool.codespell]
ignore-words-list = "ba, filterin"
