[options.extras_require]
opt =
    scikit-learn >= 1.7; python_version >= "3.10"
    packaging
    geopandas >= 1.1.0; python_version >= "3.10"
test =
    pytest
    pytest-xdist
    pytest-cov
    pytest-doctestplus
    codecov
doc =
    sphinx
    pydata-sphinx-theme
    sphinx-toggleprompt
    myst-parser
    numpydoc
    ipython
    ipykernel
    nbsphinx
sdist =
    build
    twine

[options.packages.find]
exclude =
    test*


[coverage:run]
source = dtoolkit
branch = True


[coverage:report]
ignore_errors = False
show_missing = True

# Regexes for lines to exclude from consideration
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover

    # Don't complain about missing debug-only code:
    def __repr__
    if self\.debug

    # Don't complain if tests don't hit defensive assertion code:
    raise AssertionError
    raise NotImplementedError
    AbstractMethodError

    # Don't complain if non-runnable code isn't run:
    if 0:
    if __name__ == .__main__.:
    if TYPE_CHECKING:

omit =
    */site-packages/*
    */test/*
    dtoolkit/_version.py
